--- a/src/Views/ViewEditLivros.fxml
+++ b/src/Views/ViewEditLivros.fxml
@@ -15,12 +15,12 @@
 
 <Pane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="768.0" prefWidth="1366.0" xmlns="http://javafx.com/javafx/8.0.121" xmlns:fx="http://javafx.com/fxml/1" fx:controller="Views.ViewEditLivros">
     <children>
-        <GridPane layoutX="1.0" prefHeight="73.0" prefWidth="1366.0" style="-fx-background-color: '#1E90FF';">
+        <GridPane layoutX="-6.0" prefHeight="73.0" prefWidth="1373.0" style="-fx-background-color: '#1E90FF';">
             <columnConstraints>
-                <ColumnConstraints fillWidth="false" halignment="CENTER" hgrow="SOMETIMES" maxWidth="480.0" minWidth="10.0" prefWidth="216.0" />
-                <ColumnConstraints fillWidth="false" halignment="CENTER" hgrow="SOMETIMES" maxWidth="1070.0" minWidth="0.0" prefWidth="151.0" />
-                <ColumnConstraints halignment="CENTER" hgrow="SOMETIMES" maxWidth="922.0" minWidth="10.0" prefWidth="865.0" />
-                <ColumnConstraints halignment="LEFT" hgrow="SOMETIMES" maxWidth="480.0" minWidth="10.0" prefWidth="134.0" />
+                <ColumnConstraints fillWidth="false" halignment="CENTER" hgrow="SOMETIMES" maxWidth="480.0" minWidth="10.0" prefWidth="205.0" />
+                <ColumnConstraints fillWidth="false" halignment="CENTER" hgrow="SOMETIMES" maxWidth="1070.0" minWidth="0.0" prefWidth="101.0" />
+                <ColumnConstraints halignment="CENTER" hgrow="SOMETIMES" maxWidth="1008.0" minWidth="10.0" prefWidth="956.0" />
+                <ColumnConstraints halignment="LEFT" hgrow="SOMETIMES" maxWidth="480.0" minWidth="10.0" prefWidth="110.0" />
             </columnConstraints>
             <rowConstraints>
                 <RowConstraints maxHeight="3.0" minHeight="0.0" prefHeight="0.0" />
@@ -32,12 +32,12 @@
                         <Font name="Segoe UI" size="35.0" />
                     </font>
                 </Label>
-                <Button fx:id="BtnEditBook" mnemonicParsing="false" onAction="#editBook" prefHeight="32.0" prefWidth="115.0" text="Editar livro" underline="true" GridPane.columnIndex="3" GridPane.rowIndex="1">
+                <Button fx:id="BtnEditBook" mnemonicParsing="false" onAction="#editBook" prefHeight="30.0" prefWidth="80.0" text="Editar livro" GridPane.columnIndex="3" GridPane.rowIndex="1">
                     <effect>
 
                     </effect>
                 </Button>
-            <Button mnemonicParsing="false" onAction="#goToViewLivros" prefHeight="25.0" prefWidth="73.0" text="Voltar" GridPane.columnIndex="1" GridPane.rowIndex="1" />
+            <Button mnemonicParsing="false" onAction="#goToViewLivros" prefHeight="30.0" prefWidth="80.0" text="Voltar" wrapText="true" GridPane.columnIndex="1" GridPane.rowIndex="1" />
             </children>
         </GridPane>
         <VBox layoutX="-2.0" layoutY="71.0" prefHeight="697.0" prefWidth="202.0" style="-fx-background-color: '#1E90FF';">
@@ -79,72 +79,73 @@
             <children>
                 <GridPane prefHeight="115.0" prefWidth="1022.0">
                     <columnConstraints>
-                        <ColumnConstraints hgrow="SOMETIMES" maxWidth="319.0" minWidth="10.0" prefWidth="82.0" />
-                        <ColumnConstraints hgrow="SOMETIMES" maxWidth="522.0" minWidth="10.0" prefWidth="363.0" />
-                        <ColumnConstraints hgrow="SOMETIMES" maxWidth="637.0" minWidth="10.0" prefWidth="149.0" />
+                        <ColumnConstraints hgrow="SOMETIMES" maxWidth="319.0" minWidth="10.0" prefWidth="81.0" />
+                        <ColumnConstraints hgrow="SOMETIMES" maxWidth="522.0" minWidth="10.0" prefWidth="491.0" />
+                  <ColumnConstraints hgrow="SOMETIMES" maxWidth="637.0" minWidth="8.0" prefWidth="43.0" />
+                        <ColumnConstraints hgrow="SOMETIMES" maxWidth="637.0" minWidth="10.0" prefWidth="78.0" />
                         <ColumnConstraints hgrow="SOMETIMES" maxWidth="421.0" minWidth="10.0" prefWidth="404.0" />
                     </columnConstraints>
                     <rowConstraints>
-                  <RowConstraints maxHeight="582.0" minHeight="10.0" prefHeight="36.0" vgrow="SOMETIMES" />
+                  <RowConstraints maxHeight="582.0" minHeight="10.0" prefHeight="36.0" valignment="CENTER" vgrow="SOMETIMES" />
                         <RowConstraints maxHeight="582.0" minHeight="10.0" prefHeight="37.0" vgrow="SOMETIMES" />
                         <RowConstraints maxHeight="598.0" minHeight="10.0" prefHeight="43.0" vgrow="SOMETIMES" />
                     </rowConstraints>
                     <children>
-                        <Label alignment="CENTER" contentDisplay="CENTER" prefHeight="65.0" prefWidth="167.0" style="-fx: 60px;" text="Titulo">
+                        <Label contentDisplay="CENTER" nodeOrientation="LEFT_TO_RIGHT" prefHeight="65.0" prefWidth="167.0" style="-fx: 60px;" text="Titulo">
                             <font>
-                                <Font name="Segoe UI" size="22.0" />
+                                <Font name="Segoe UI" size="20.0" />
                             </font>
                         </Label>
-                        <TextField fx:id="FieldTitulo" disable="true" prefHeight="47.0" prefWidth="430.0" GridPane.columnIndex="1" GridPane.columnSpan="3">
+                        <TextField fx:id="FieldTitulo" disable="true" prefHeight="35.0" prefWidth="604.0" GridPane.columnIndex="1" GridPane.columnSpan="4">
                             <font>
-                                <Font name="Segoe UI" size="22.0" />
+                                <Font name="Segoe UI" size="18.0" />
                             </font>
                         </TextField>
-                        <Label alignment="CENTER" contentDisplay="CENTER" prefHeight="65.0" prefWidth="167.0" style="-fx: 60px;" text="Autor" GridPane.columnIndex="2" GridPane.rowIndex="1">
+                        <Label contentDisplay="CENTER" prefHeight="65.0" prefWidth="167.0" style="-fx: 60px;" text="Autor" GridPane.columnIndex="3" GridPane.rowIndex="1">
                             <font>
-                                <Font name="Segoe UI" size="22.0" />
+                                <Font name="Segoe UI" size="20.0" />
                             </font>
                         </Label>
-                        <Label alignment="CENTER" contentDisplay="CENTER" prefHeight="65.0" prefWidth="167.0" style="-fx: 60px;" text="Gênero" GridPane.rowIndex="2">
+                        <Label contentDisplay="CENTER" prefHeight="65.0" prefWidth="167.0" style="-fx: 60px;" text="Gênero" GridPane.rowIndex="2">
                             <font>
-                                <Font name="Segoe UI" size="22.0" />
+                                <Font name="Segoe UI" size="20.0" />
                             </font>
                         </Label>
-                        <Label alignment="CENTER" contentDisplay="CENTER" prefHeight="65.0" prefWidth="167.0" style="-fx: 60px;" text="Editora" GridPane.columnIndex="2" GridPane.rowIndex="2">
+                        <Label contentDisplay="CENTER" prefHeight="65.0" prefWidth="167.0" style="-fx: 60px;" text="Editora" GridPane.columnIndex="3" GridPane.rowIndex="2">
                             <font>
-                                <Font name="Segoe UI" size="22.0" />
+                                <Font name="Segoe UI" size="20.0" />
                             </font>
                         </Label>
-                        <TextField fx:id="FieldAutor" disable="true" prefHeight="47.0" prefWidth="430.0" GridPane.columnIndex="3" GridPane.rowIndex="1">
+                        <TextField fx:id="FieldAutor" disable="true" prefHeight="35.0" prefWidth="430.0" GridPane.columnIndex="4" GridPane.rowIndex="1">
                             <font>
-                                <Font name="Segoe UI" size="22.0" />
+                                <Font name="Segoe UI" size="18.0" />
                             </font>
                         </TextField>
-                        <TextField fx:id="FieldGenero" disable="true" prefHeight="47.0" prefWidth="430.0" GridPane.columnIndex="1" GridPane.rowIndex="2">
+                        <TextField fx:id="FieldGenero" disable="true" prefHeight="35.0" prefWidth="430.0" GridPane.columnIndex="1" GridPane.rowIndex="2">
                             <font>
-                                <Font name="Segoe UI" size="22.0" />
+                                <Font name="Segoe UI" size="18.0" />
                             </font>
                         </TextField>
-                        <TextField fx:id="FieldEditora" disable="true" prefHeight="47.0" prefWidth="430.0" GridPane.columnIndex="3" GridPane.rowIndex="2">
+                        <TextField fx:id="FieldEditora" disable="true" prefHeight="35.0" prefWidth="430.0" GridPane.columnIndex="4" GridPane.rowIndex="2">
                             <font>
-                                <Font name="Segoe UI" size="22.0" />
+                                <Font name="Segoe UI" size="18.0" />
                             </font>
                         </TextField>
-                  <Label alignment="CENTER" contentDisplay="CENTER" prefHeight="65.0" prefWidth="167.0" style="-fx: 60px;" text="Local" textAlignment="CENTER" GridPane.rowIndex="1">
+                  <Label contentDisplay="CENTER" prefHeight="65.0" prefWidth="167.0" style="-fx: 60px;" text="Local" textAlignment="CENTER" GridPane.rowIndex="1">
                      <font>
-                        <Font name="Segoe UI" size="22.0" />
+                        <Font name="Segoe UI" size="20.0" />
                      </font></Label>
-                  <TextField fx:id="FieldLocation" disable="true" GridPane.columnIndex="1" GridPane.rowIndex="1">
+                  <TextField fx:id="FieldLocation" disable="true" prefHeight="35.0" GridPane.columnIndex="1" GridPane.rowIndex="1">
                      <font>
-                        <Font name="Segoe UI" size="22.0" />
+                        <Font name="Segoe UI" size="18.0" />
                      </font></TextField>
                     </children>
                 </GridPane>
                 <TableView fx:id="TableExemplares" prefHeight="399.0" prefWidth="1096.0" GridPane.rowIndex="2">
                     <columns>
-                        <TableColumn fx:id="ExemplId" prefWidth="207.0" text="Id do exemplar" />
-                        <TableColumn fx:id="Cod_Exemplar" prefWidth="207.0" text="Código Exemplar" />
-                        <TableColumn fx:id="StatusId" prefWidth="561.0" text="Status " />
+                        <TableColumn fx:id="ExemplId" prefWidth="204.99998474121094" text="Id do exemplar" />
+                        <TableColumn fx:id="Cod_Exemplar" prefWidth="508.0" text="Código Exemplar" />
+                        <TableColumn fx:id="StatusId" prefWidth="380.0" text="Status " />
                         <TableColumn fx:id="LivroId" prefWidth="327.0" text="Codigo livro" visible="false" />
                     </columns>
                 </TableView>
@@ -153,9 +154,8 @@
                         <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
                         <ColumnConstraints halignment="CENTER" hgrow="SOMETIMES" maxWidth="846.0" minWidth="10.0" prefWidth="322.0" />
                         <ColumnConstraints halignment="RIGHT" hgrow="SOMETIMES" maxWidth="300.0" minWidth="0.0" prefWidth="0.0" />
-                        <ColumnConstraints halignment="RIGHT" hgrow="SOMETIMES" maxWidth="402.0" minWidth="10.0" prefWidth="367.0" />
-                        <ColumnConstraints halignment="RIGHT" hgrow="SOMETIMES" maxWidth="319.0" minWidth="10.0" prefWidth="126.0" />
-                  <ColumnConstraints halignment="RIGHT" hgrow="SOMETIMES" maxWidth="198.0" minWidth="0.0" prefWidth="0.0" />
+                        <ColumnConstraints halignment="RIGHT" hgrow="SOMETIMES" maxWidth="510.0" minWidth="10.0" prefWidth="510.0" />
+                        <ColumnConstraints halignment="RIGHT" hgrow="SOMETIMES" maxWidth="319.0" minWidth="10.0" prefWidth="137.0" />
                     </columnConstraints>
                     <rowConstraints>
                         <RowConstraints />
@@ -166,12 +166,12 @@
                                 <Font name="Segoe UI" size="25.0" />
                             </font>
                         </Label>
-                        <Button fx:id="BtnRemoveExemplar" alignment="CENTER" contentDisplay="CENTER" mnemonicParsing="false" onAction="#removeSelectedExemplar" prefHeight="25.0" prefWidth="116.0" text="Remover Exemplar" underline="true" GridPane.columnIndex="3">
+                        <Button fx:id="BtnRemoveExemplar" alignment="CENTER" contentDisplay="CENTER" mnemonicParsing="false" onAction="#removeSelectedExemplar" prefHeight="25.0" prefWidth="120.0" text="Remover Exemplar" GridPane.columnIndex="3">
                             <effect>
 
                             </effect>
                         </Button>
-                  <Button fx:id="BtnAddExemplar" mnemonicParsing="false" onAction="#newExemplar" text="Adicionar Exemplar" GridPane.columnIndex="4" />
+                  <Button fx:id="BtnAddExemplar" mnemonicParsing="false" onAction="#newExemplar" prefHeight="25.0" prefWidth="120.0" text="Adicionar Exemplar" GridPane.columnIndex="4" />
                     </children>
                 </GridPane>
             </children>
