--- a/src/Views/ViewLivros.fxml
+++ b/src/Views/ViewLivros.fxml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import javafx.geometry.Insets?>
 <?import javafx.scene.Cursor?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
@@ -15,34 +16,38 @@
 
 <Pane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" xmlns="http://javafx.com/javafx/8.0.121" xmlns:fx="http://javafx.com/fxml/1" fx:controller="Views.ViewLivros">
     <children>
-        <GridPane prefHeight="73.0" prefWidth="1366.0" style="-fx-background-color: '#1E90FF';">
+        <GridPane prefHeight="73.0" prefWidth="1378.0" style="-fx-background-color: '#1E90FF';">
             <columnConstraints>
                 <ColumnConstraints fillWidth="false" halignment="CENTER" hgrow="SOMETIMES" maxWidth="480.0" minWidth="10.0" prefWidth="218.0" />
                 <ColumnConstraints fillWidth="false" halignment="CENTER" hgrow="SOMETIMES" maxWidth="1070.0" minWidth="0.0" prefWidth="940.0" />
-                <ColumnConstraints halignment="CENTER" hgrow="SOMETIMES" maxWidth="480.0" minWidth="10.0" prefWidth="98.0" />
-                <ColumnConstraints halignment="LEFT" hgrow="SOMETIMES" maxWidth="480.0" minWidth="10.0" prefWidth="106.0" />
+                <ColumnConstraints halignment="CENTER" hgrow="SOMETIMES" maxWidth="480.0" minWidth="10.0" prefWidth="84.0" />
+                <ColumnConstraints halignment="LEFT" hgrow="SOMETIMES" maxWidth="480.0" minWidth="10.0" prefWidth="122.0" />
             </columnConstraints>
             <rowConstraints>
                 <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
             </rowConstraints>
             <children>
-                <Button alignment="CENTER" contentDisplay="CENTER" mnemonicParsing="false" onAction="#goToViewEditlivros" prefHeight="25.0" prefWidth="94.0" text="Detalhes do livro" GridPane.columnIndex="3">
+                <Button alignment="CENTER" contentDisplay="CENTER" mnemonicParsing="false" onAction="#goToViewEditlivros" prefHeight="30.0" prefWidth="106.0" text="Detalhes do livro" GridPane.columnIndex="3">
                     <effect>
 
                     </effect>
                     <cursor>
                         <Cursor fx:constant="S_RESIZE" />
                     </cursor></Button>
-                <Button mnemonicParsing="false" onAction="#goToViewNewlivro" text="Novo livro" GridPane.columnIndex="2">
-                    <effect>
-
-                    </effect></Button>
+                <Button mnemonicParsing="false" onAction="#goToViewNewlivro" prefHeight="30.0" prefWidth="71.0" text="Novo livro" GridPane.columnIndex="2">
+                </Button>
                 <Label text="iLibrary" textFill="WHITE">
                     <font>
                         <Font name="Segoe UI" size="35.0" />
                     </font>
                 </Label>
-                <TextField accessibleText="Pesquisar" prefHeight="25.0" prefWidth="400.0" promptText="Pesquisar" style="-fx-background-color: '#1E90FF'; -fx-border-color: '#ffffff';" text="Pesquisar" GridPane.columnIndex="1" />
+                <TextField accessibleText="Pesquisar" prefHeight="25.0" prefWidth="400.0" promptText="Pesquisar" style="-fx-background-color: '#1E90FF'; -fx-border-style: hidden hidden solid hidden; -fx-border-color: '#FFFFFF'; -fx-border-width: 2px;" GridPane.columnIndex="1">
+               <GridPane.margin>
+                  <Insets />
+               </GridPane.margin>
+               <font>
+                  <Font name="Segoe UI Bold" size="14.0" />
+               </font></TextField>
             </children>
         </GridPane>
         <VBox layoutX="-2.0" layoutY="71.0" prefHeight="697.0" prefWidth="210.0" style="-fx-background-color: '#1E90FF';">
@@ -69,7 +74,7 @@
                 </Button>
             </children>
         </VBox>
-        <TableView fx:id="TableLivros" onMouseClicked="#mySelectedBook" layoutX="208.0" layoutY="71.0" prefHeight="697.0" prefWidth="1166.0">
+        <TableView fx:id="TableLivros" layoutX="208.0" layoutY="73.0" onMouseClicked="#mySelectedBook" prefHeight="697.0" prefWidth="1171.0">
             <columns>
             <TableColumn fx:id="LivroId" prefWidth="52.0" text="Id" />
             <TableColumn fx:id="TituloId" prefWidth="448.0" text="Titulo" />
