--- a/src/Views/ViewLivros.fxml
+++ b/src/Views/ViewLivros.fxml
@@ -1,93 +1,87 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <?import javafx.geometry.Insets?>
-<?import javafx.scene.control.*?>
 <?import javafx.scene.Cursor?>
-<?import javafx.scene.layout.*?>
-<?import javafx.scene.text.*?>
-<Pane xmlns:fx="http://javafx.com/fxml/1" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity"
-      minWidth="-Infinity" xmlns="http://javafx.com/javafx/8.0.121" fx:controller="Views.ViewLivros">
+<?import javafx.scene.control.Button?>
+<?import javafx.scene.control.Label?>
+<?import javafx.scene.control.TableColumn?>
+<?import javafx.scene.control.TableView?>
+<?import javafx.scene.control.TextField?>
+<?import javafx.scene.layout.ColumnConstraints?>
+<?import javafx.scene.layout.GridPane?>
+<?import javafx.scene.layout.Pane?>
+<?import javafx.scene.layout.RowConstraints?>
+<?import javafx.scene.layout.VBox?>
+<?import javafx.scene.text.Font?>
+
+<Pane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" xmlns="http://javafx.com/javafx/8.0.121" xmlns:fx="http://javafx.com/fxml/1" fx:controller="Views.ViewLivros">
     <GridPane prefHeight="73.0" prefWidth="1378.0" style="-fx-background-color: '#1E90FF';">
         <columnConstraints>
-            <ColumnConstraints fillWidth="false" halignment="CENTER" hgrow="SOMETIMES" maxWidth="480.0"
-                               minWidth="10.0" prefWidth="218.0"/>
-            <ColumnConstraints fillWidth="false" halignment="CENTER" hgrow="SOMETIMES" maxWidth="1070.0"
-                               minWidth="0.0" prefWidth="940.0"/>
-            <ColumnConstraints halignment="CENTER" hgrow="SOMETIMES" maxWidth="480.0" minWidth="10.0"
-                               prefWidth="84.0"/>
-            <ColumnConstraints halignment="LEFT" hgrow="SOMETIMES" maxWidth="480.0" minWidth="10.0"
-                               prefWidth="122.0"/>
+            <ColumnConstraints fillWidth="false" halignment="CENTER" hgrow="SOMETIMES" maxWidth="480.0" minWidth="10.0" prefWidth="218.0" />
+            <ColumnConstraints fillWidth="false" halignment="CENTER" hgrow="SOMETIMES" maxWidth="1070.0" minWidth="0.0" prefWidth="940.0" />
+            <ColumnConstraints halignment="CENTER" hgrow="SOMETIMES" maxWidth="480.0" minWidth="10.0" prefWidth="84.0" />
+            <ColumnConstraints halignment="LEFT" hgrow="SOMETIMES" maxWidth="480.0" minWidth="10.0" prefWidth="122.0" />
         </columnConstraints>
         <rowConstraints>
-            <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES"/>
+            <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
         </rowConstraints>
-        <Button alignment="CENTER" contentDisplay="CENTER" mnemonicParsing="false" onAction="#goToViewEditlivros"
-                prefHeight="30.0" prefWidth="106.0" text="Detalhes do livro" GridPane.columnIndex="3">
+        <Button alignment="CENTER" contentDisplay="CENTER" mnemonicParsing="false" onAction="#goToViewEditlivros" prefHeight="30.0" prefWidth="106.0" text="Detalhes do livro" GridPane.columnIndex="3">
             <effect>
 
             </effect>
             <cursor>
-                <Cursor fx:constant="S_RESIZE"/>
+                <Cursor fx:constant="S_RESIZE" />
             </cursor>
         </Button>
-        <Button mnemonicParsing="false" onAction="#goToViewNewlivro" prefHeight="30.0" prefWidth="71.0"
-                text="Novo livro" GridPane.columnIndex="2">
+        <Button mnemonicParsing="false" onAction="#goToViewNewlivro" prefHeight="30.0" prefWidth="71.0" text="Novo livro" GridPane.columnIndex="2">
         </Button>
         <Label text="iLibrary" textFill="WHITE">
             <font>
-                <Font name="Segoe UI" size="35.0"/>
+                <Font name="Segoe UI" size="35.0" />
             </font>
         </Label>
-        <TextField accessibleText="Pesquisar" prefHeight="25.0" prefWidth="400.0" promptText="Pesquisar"
-                   style="-fx-background-color: '#1E90FF'; -fx-border-style: hidden hidden solid hidden; -fx-border-color: '#FFFFFF'; -fx-border-width: 2px;"
-                   GridPane.columnIndex="1">
+        <TextField fx:id="Pesquisar" accessibleText="Pesquisar" onKeyReleased="#pesquisaLivros" prefHeight="25.0" prefWidth="400.0" promptText="Pesquisar" style="-fx-background-color: '#1E90FF'; -fx-border-style: hidden hidden solid hidden; -fx-border-color: '#FFFFFF'; -fx-border-width: 2px;" GridPane.columnIndex="1">
             <GridPane.margin>
-                <Insets/>
+                <Insets />
             </GridPane.margin>
             <font>
-                <Font name="Segoe UI Bold" size="14.0"/>
+                <Font name="Segoe UI Bold" size="15.0" />
             </font>
         </TextField>
     </GridPane>
-    <VBox layoutX="-2.0" layoutY="71.0" prefHeight="697.0" prefWidth="210.0"
-          style="-fx-background-color: '#1E90FF';">
-        <Button mnemonicParsing="false" prefHeight="50.0" prefWidth="208.0" style="-fx-background-color: '#1E90FF';"
-                text="Livros" textFill="WHITE">
+    <VBox layoutX="-2.0" layoutY="71.0" prefHeight="697.0" prefWidth="210.0" style="-fx-background-color: '#1E90FF';">
+        <Button mnemonicParsing="false" prefHeight="50.0" prefWidth="208.0" style="-fx-background-color: '#1E90FF';" text="Livros" textFill="WHITE">
             <font>
-                <Font name="Segoe UI" size="22.0"/>
+                <Font name="Segoe UI" size="22.0" />
             </font>
         </Button>
-        <Button layoutX="10.0" layoutY="50.0" mnemonicParsing="false" prefHeight="50.0" prefWidth="214.0"
-                style="-fx-background-color: '#1E90FF';" text="Fila de Espera" textFill="WHITE">
+        <Button layoutX="10.0" layoutY="50.0" mnemonicParsing="false" prefHeight="50.0" prefWidth="214.0" style="-fx-background-color: '#1E90FF';" text="Fila de Espera" textFill="WHITE">
             <font>
-                <Font name="Segoe UI" size="22.0"/>
+                <Font name="Segoe UI" size="22.0" />
             </font>
         </Button>
-        <Button layoutX="10.0" layoutY="50.0" mnemonicParsing="false" prefHeight="50.0" prefWidth="244.0"
-                style="-fx-background-color: '#1E90FF';" text="Emprestimo" textFill="WHITE">
+        <Button layoutX="10.0" layoutY="50.0" mnemonicParsing="false" prefHeight="50.0" prefWidth="244.0" style="-fx-background-color: '#1E90FF';" text="Emprestimo" textFill="WHITE">
             <font>
-                <Font name="Segoe UI" size="22.0"/>
+                <Font name="Segoe UI" size="22.0" />
             </font>
         </Button>
-        <Button layoutX="10.0" layoutY="50.0" mnemonicParsing="false" prefHeight="50.0" prefWidth="274.0"
-                style="-fx-background-color: '#1E90FF';" text="Usuários" textFill="WHITE">
+        <Button layoutX="10.0" layoutY="50.0" mnemonicParsing="false" prefHeight="50.0" prefWidth="274.0" style="-fx-background-color: '#1E90FF';" text="Usuários" textFill="WHITE">
             <font>
-                <Font name="Segoe UI" size="22.0"/>
+                <Font name="Segoe UI" size="22.0" />
             </font>
         </Button>
     </VBox>
-    <TableView fx:id="TableLivros" layoutX="208.0" layoutY="73.0" onMouseClicked="#mySelectedBook" prefHeight="697.0"
-               prefWidth="1171.0">
+    <TableView fx:id="TableLivros" layoutX="208.0" layoutY="73.0" onMouseClicked="#mySelectedBook" prefHeight="697.0" prefWidth="1171.0">
         <columns>
-            <TableColumn fx:id="LivroId" prefWidth="52.0" text="Id"/>
-            <TableColumn fx:id="TituloId" prefWidth="448.0" text="Titulo"/>
-            <TableColumn fx:id="GeneroId" minWidth="20.0" prefWidth="155.0" text="Genero"/>
-            <TableColumn fx:id="AutorId" minWidth="50.0" prefWidth="297.0" text="Autor"/>
-            <TableColumn fx:id="PosicaoId" minWidth="50.0" prefWidth="288.0" text="Posicao"/>
-            <TableColumn fx:id="EditoraId" minWidth="50.0" prefWidth="288.0" text="Posicao"/>
+            <TableColumn fx:id="LivroId" prefWidth="52.0" text="Id" />
+            <TableColumn fx:id="TituloId" prefWidth="448.0" text="Titulo" />
+            <TableColumn fx:id="GeneroId" minWidth="20.0" prefWidth="155.0" text="Genero" />
+            <TableColumn fx:id="AutorId" minWidth="50.0" prefWidth="297.0" text="Autor" />
+            <TableColumn fx:id="PosicaoId" minWidth="50.0" prefWidth="288.0" text="Posicao" />
+            <TableColumn fx:id="EditoraId" minWidth="50.0" prefWidth="288.0" text="Posicao" />
         </columns>
         <cursor>
-            <Cursor fx:constant="DEFAULT"/>
+            <Cursor fx:constant="DEFAULT" />
         </cursor>
     </TableView>
 </Pane>
